# Fed-GNODEFormer

./: README.md  pyproject.toml  runner.py
src/Fed_GNODEFormer/: dataprocess.py  fed_main.py  model.py  server.py  train_class.py  train_func.py
src/GNODEFormer/: centralised_main.py  model.py  utils.py
