[tool.poetry]
name = "fed-gnodeformer"
version = "1.0.0"
description = "This is the official code implementation for the paper titled \"Federated Spectral Graph Transformers Meet Neural Ordinary Differential Equations for Non-IID Graphs\""
authors = ["SpringWiz11 <kishangurumurthy@outlook.com>"]
license = "license = { file = \"LICENSE\" }"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
torch = "2.2.2"
ray = "2.10.0"
numpy = "1.24.2"
ogb = "1.3.5"
dgl = "1.0.0"
torchmetrics = "0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
